Details
-
Bug
-
Resolution: Done
-
P1: Critical
-
Qt Creator 3.1.0-beta
-
None
-
Ubuntu 13.10
-
bde1f044bc99950d3bba2b6b7a243cf9b591ea30
Description
Take this:
void findValueByName()
{
}
int main()
{
findValueByName();
}
and do:
- Hit C-Shift+R on "findValueByName"
- Check "Preserve case"
- Modify the "Replace with" term to: "findValueName" (without "By)
- Hit "Replace"
Resulting stack trace:
0 raise /lib/x86_64-linux-gnu/libc.so.6 0x7ffff4888f77 1 abort /lib/x86_64-linux-gnu/libc.so.6 0x7ffff488c5e8 2 QMessageLogger::fatal(char const*, ...) const /home/nik/usr/qt-5.2.1-install/5.2.1/gcc_64/lib/libQt5Core.so.5 0x7ffff593e10e 3 qt_assert(char const*, char const*, int) /home/nik/usr/qt-5.2.1-install/5.2.1/gcc_64/lib/libQt5Core.so.5 0x7ffff593adb1 4 QString::at qstring.h 739 0x7ffff7641605 5 Utils::Internal::matchCaseReplacement filesearch.cpp 367 0x7ffff765b210 6 Utils::matchCaseReplacement filesearch.cpp 405 0x7ffff765b5ec 7 TextEditor::BaseFileFind::replaceAll basefilefind.cpp 405 0x7fffe5dff07e 8 CppTools::Internal::CppFindReferences::onReplaceButtonClicked cppfindreferences.cpp 384 0x7fffe3f58ab0 9 CppTools::Internal::CppFindReferences::qt_static_metacall moc_cppfindreferences.cpp 111 0x7fffe4032054 10 QMetaObject::activate(QObject*, int, int, void**) /home/nik/usr/qt-5.2.1-install/5.2.1/gcc_64/lib/libQt5Core.so.5 0x7ffff5b606b1 11 Core::SearchResult::replaceButtonClicked moc_searchresultwindow.cpp 287 0x7fffec7b324f 12 Core::SearchResult::qt_static_metacall moc_searchresultwindow.cpp 151 0x7fffec7b2bad 13 QMetaObject::activate(QObject*, int, int, void**) /home/nik/usr/qt-5.2.1-install/5.2.1/gcc_64/lib/libQt5Core.so.5 0x7ffff5b606b1 14 Core::Internal::SearchResultWidget::replaceButtonClicked moc_searchresultwidget.cpp 286 0x7fffec7b4e6f 15 Core::Internal::SearchResultWidget::handleReplaceButton searchresultwidget.cpp 449 0x7fffec767dc8 16 Core::Internal::SearchResultWidget::qt_static_metacall moc_searchresultwidget.cpp 156 0x7fffec7b498b 17 QMetaObject::activate(QObject*, int, int, void**) /home/nik/usr/qt-5.2.1-install/5.2.1/gcc_64/lib/libQt5Core.so.5 0x7ffff5b606b1 18 ?? /home/nik/usr/qt-5.2.1-install/5.2.1/gcc_64/lib/libQt5Widgets.so.5 0x7ffff7022605 19 QMetaObject::activate(QObject*, int, int, void**) /home/nik/usr/qt-5.2.1-install/5.2.1/gcc_64/lib/libQt5Core.so.5 0x7ffff5b606b1 20 QWidgetLineControl::processKeyEvent(QKeyEvent*) /home/nik/usr/qt-5.2.1-install/5.2.1/gcc_64/lib/libQt5Widgets.so.5 0x7ffff70aeeec 21 QLineEdit::keyPressEvent(QKeyEvent*) /home/nik/usr/qt-5.2.1-install/5.2.1/gcc_64/lib/libQt5Widgets.so.5 0x7ffff701d899 22 QWidget::event(QEvent*) /home/nik/usr/qt-5.2.1-install/5.2.1/gcc_64/lib/libQt5Widgets.so.5 0x7ffff6f050ed 23 QLineEdit::event(QEvent*) /home/nik/usr/qt-5.2.1-install/5.2.1/gcc_64/lib/libQt5Widgets.so.5 0x7ffff702067a 24 QApplicationPrivate::notify_helper(QObject*, QEvent*) /home/nik/usr/qt-5.2.1-install/5.2.1/gcc_64/lib/libQt5Widgets.so.5 0x7ffff6ecd0f4 25 QApplication::notify(QObject*, QEvent*) /home/nik/usr/qt-5.2.1-install/5.2.1/gcc_64/lib/libQt5Widgets.so.5 0x7ffff6ed0e9e 26 QCoreApplication::notifyInternal(QObject*, QEvent*) /home/nik/usr/qt-5.2.1-install/5.2.1/gcc_64/lib/libQt5Core.so.5 0x7ffff5b37734 27 ?? /home/nik/usr/qt-5.2.1-install/5.2.1/gcc_64/lib/libQt5Widgets.so.5 0x7ffff6f26fb0 28 QApplicationPrivate::notify_helper(QObject*, QEvent*) /home/nik/usr/qt-5.2.1-install/5.2.1/gcc_64/lib/libQt5Widgets.so.5 0x7ffff6ecd0f4 29 QApplication::notify(QObject*, QEvent*) /home/nik/usr/qt-5.2.1-install/5.2.1/gcc_64/lib/libQt5Widgets.so.5 0x7ffff6ed06ae 30 QCoreApplication::notifyInternal(QObject*, QEvent*) /home/nik/usr/qt-5.2.1-install/5.2.1/gcc_64/lib/libQt5Core.so.5 0x7ffff5b37734 31 QGuiApplicationPrivate::processKeyEvent(QWindowSystemInterfacePrivate::KeyEvent*) /home/nik/usr/qt-5.2.1-install/5.2.1/gcc_64/lib/libQt5Gui.so.5 0x7ffff605d238 32 QGuiApplicationPrivate::processWindowSystemEvent(QWindowSystemInterfacePrivate::WindowSystemEvent*) /home/nik/usr/qt-5.2.1-install/5.2.1/gcc_64/lib/libQt5Gui.so.5 0x7ffff6066485 33 QWindowSystemInterface::sendWindowSystemEvents(QFlags<QEventLoop::ProcessEventsFlag>) /home/nik/usr/qt-5.2.1-install/5.2.1/gcc_64/lib/libQt5Gui.so.5 0x7ffff604dba8 34 ?? /home/nik/usr/qt-5.2.1-install/5.2.1/gcc_64/plugins/platforms/libqxcb.so 0x7fffeedfe1b0 35 g_main_context_dispatch /lib/x86_64-linux-gnu/libglib-2.0.so.0 0x7ffff357c3b6 36 ?? /lib/x86_64-linux-gnu/libglib-2.0.so.0 0x7ffff357c708 37 g_main_context_iteration /lib/x86_64-linux-gnu/libglib-2.0.so.0 0x7ffff357c7ac 38 QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) /home/nik/usr/qt-5.2.1-install/5.2.1/gcc_64/lib/libQt5Core.so.5 0x7ffff5b88374 39 QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) /home/nik/usr/qt-5.2.1-install/5.2.1/gcc_64/lib/libQt5Core.so.5 0x7ffff5b364ab 40 QCoreApplication::exec() /home/nik/usr/qt-5.2.1-install/5.2.1/gcc_64/lib/libQt5Core.so.5 0x7ffff5b3a53e 41 main main.cpp 533 0x40f071
Attachments
Issue Links
- relates to
-
QTCREATORBUG-11194 Rename symbol results in wrong result
-
- Closed
-